--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "build": {
     "env": {
-      "PIP_REQUIREMENTS_PATH": "requirements.txt"
+      "PIP_REQUIREMENTS_PATH": "requirement.txt"
     }
   },
   "routes": [
